syntax = "proto3";

import "commons.proto";

option java_multiple_files = true;
option java_package = "br.edu.ufabc.mfmachado.chordzilla.proto";

service LeaveChord {
  rpc Leave (LeaveChordRequest) returns (LeaveChordResponse) {}
}

message LeaveChordRequest {
  NodeInformation predecessor = 1;
}

message LeaveChordResponse {}