syntax = "proto3";

import "commons.proto";

option java_multiple_files = true;
option java_package = "br.edu.ufabc.mfmachado.chordzilla.proto";

service TransferData {
  rpc Transfer (TransferDataRequest) returns (TransferDataResponse) {}
}

message TransferDataRequest {
  repeated Data data = 1;
}

message TransferDataResponse {}